--- a/views/detail.html
+++ b/views/detail.html
@@ -1,6 +1,9 @@
 <div class="content has_header">
   <div class="header" ng-controller="SearchBarController">
-    {{test}}
+    <ul class="navigate">
+      <li ng-click="back();" class="{{canGoBack?'': 'disable'}}">&lsaquo;</li>
+      <li ng-click="forward();" class="{{canGoForward?'': 'disable'}}">&rsaquo;</li>
+    </ul>
     <input type="text" class="search" my-enter="search()" ng-model="query" placeholder="Sök på film, serie" name="name" value="">
   </div>
   <div class="container">
@@ -8,6 +11,10 @@
     <div class="row">
       <div class="col-sm-4 poster">
         <img ng-src="{{filterImg(dreamfilm.poster)}}" alt="" />
+
+        <input type="button" value="Play movie ►" ng-click="play(dreamfilm.player[0].url)" ng-if="dreamfilm.type=='movie'">
+        <input type="button" name="name" value="Lägg till som favorit" ng-click="addFav();" ng-if="is_favorit==false">
+        <input type="button" name="name" value="Ta bort som favorit" ng-click="removeFav();" ng-if="is_favorit==true">
       </div>
 
       <div class="col-sm-8">
@@ -28,7 +35,7 @@
               Kunde inte hitta filmbeskrivning
           </p>
         </div>
-
+        {{showedEpisodes}}
         <p ng-if="imdb!=-1">
           {{imdb.plot}}
         </p>
@@ -39,15 +46,13 @@
           </ul>
           <div class="tab-content">
             <ul ng-repeat="(key, season) in episodes" ng-if="key==cseason">
-              <li ng-repeat="episode in season" ng-click="play(episode.url)">Avsnitt {{episode.episode}}</li>
+              <li class="{{(viewedEpisodes|contains:episode.id)? 'viewed' : ''}}"ng-repeat="episode in season" ng-click="play(episode.url,episode.id)"><i class="fa fa-eye" title="Visat" aria-hidden="true"></i> Avsnitt {{episode.episode}} </li>
             </ul>
           </div>
         </div>
 
 
-        <input type="button" value="Play movie" ng-click="play(dreamfilm.player[0].url)" ng-if="dreamfilm.type=='movie'">
-        <input type="button" name="name" value="Lägg till som favorit" ng-click="addFav();" ng-if="is_favorit==false">
-        <input type="button" name="name" value="Ta bort som favorit" ng-click="removeFav();" ng-if="is_favorit==true">
+
       </div>
     </div>
 
