--- a/player/style.css
+++ b/player/style.css
@@ -10,6 +10,7 @@ html,body{
  -ms-user-select: none;
   transition-duration: 0.2s;
 }
+body.hideMouse {cursor: none;}
 #video_ctrl{
   position: absolute;
   top:0;
@@ -27,7 +28,6 @@ video{
   width: 320px;
   height: 60px;
   background: -webkit-linear-gradient(rgba(37,37,37,0.90), rgba(0,0,0,0.90));
-  display: none;
   position: fixed;
   left: 0;
   right: 0;
@@ -35,26 +35,60 @@ video{
   bottom: 20px;
   margin: auto;
   border-radius: 5px;
-}
-.controls.block{
   display: block;
+}
+.controls .volyme-slider{
+  position: absolute;
+  left: 20px;
+  top:8px;
+  height: 25px;
+  width: 120px;
+}
+.controls .volyme-icon{
+  width: 15px;
+  height: 25px;
+  float: left;
+}
+
+.controls .volyme-icon i{
+  color: gray;
+  line-height: 25px;
+  font-size: 15px;
+}
+.controls.loaded .volyme-icon i{
+  color: #fff;
+}
+.controls .volyme-container{
+  width: 0;
+  height: 25px;
+  float: left;
+  overflow: hidden;
+}
+.controls .volyme-container input[type=range]{
+  transform: scale(0.8);
 }
 .controls .play{
   font-size: 28px;
   color: #fff;
+  height: 28px;
   text-align: center;
   display: block;
   margin-top: 5px;
 }
+
 .slide{
   margin-left: 60px;
   margin-right: 60px;
   margin-bottom: 10px;
+  opacity: 0.8;
+}
+.controls.loaded .slide{
+  opacity: 1;
 }
 .controls #currentTime{
   position: absolute;
   left: 5px;
-  bottom: 3px;
+  bottom: 8px;
   color: rgba(255,255,255,0.8);
   font-size: 11px;
   font-family: Arial;
@@ -64,7 +98,7 @@ video{
 .controls #timeLeft{
   position: absolute;
   right: 5px;
-  bottom: 3px;
+  bottom: 8px;
   color: rgba(255,255,255,0.8);
   font-size: 11px;
   font-family: Arial;
@@ -73,4 +107,47 @@ video{
 }
 body:hover .controls{
   display: block;
+}
+h1{
+  font-family: Arial,sans-serif;
+  color: #fff;
+  font-size: 30px;
+}
+.continue{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top:0;
+  bottom: 0;
+  z-index: 999329329;
+  display: block;
+}
+.continue.hide{
+  display: none;
+}
+.continue .continer{
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12%;
+}
+.continue .btn{
+  padding: 8px;
+  -webkit-appearance: none;
+  background-color: #000;
+  border:1px solid gray;border-radius: 3px;
+  color: #fff;
+  width: 250px;
+  font-size: 15px;
+  display: block;
+  margin: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.continue .btn:hover{
+  border:1px solid #5d99df;
+  box-shadow: 0 0 5px #5d99df;
 }
